# study-practice

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRACTS.md  README.md  dev-setup.sh  docker-compose.override.yml  docker-compose.yml  init.sh  tz.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  documents.py  search.py
backend/app/core/: config.py  db.py  enums.py  security.py  seed.py
backend/app/models/: __init__.py  document.py  search_query.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  documents.py  search.py
backend/app/services/: __init__.py  cache.py  chunker.py  es.py  parser.py  pipeline.py  uploads.py
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_chunker.py  test_contract.py  test_es.py  test_fixtures_upload.py  test_parser.py  test_search.py  test_search_history.py  test_upload_validation.py
docs/: architecture.md  user-guide.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: critical-path.spec.ts  helpers.ts  smoke.spec.ts
frontend/: Dockerfile  README.md  nginx.conf  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/pages/: AuthForm.tsx  LoginPage.tsx  RegisterPage.tsx  SearchPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: api.ts
frontend/src/utils/: highlight.tsx
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: search.json
plans/: backend.md  devops.md  frontend.md  qa.md
tests/fixtures/: README.md  generate.py
tests/load/: REPORT.md  loadtest.py  run_gate.sh
tests/quality/: REPORT.md  precision_at_3.py  seed.py
