[project]
name = "knowledge-search-backend"
version = "0.1.0"
description = "University knowledge search — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "prometheus-fastapi-instrumentator>=7.0",
    # BE stages add: sqlalchemy, psycopg, elasticsearch, redis, pdfplumber, python-docx
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",  # TestClient
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
