[project]
name = "knowledge-search-backend"
version = "0.1.0"
description = "University knowledge search — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2",
    "psycopg[binary]>=3",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "elasticsearch>=8.15,<9",
    "redis>=5",
    "prometheus-fastapi-instrumentator>=7.0",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",  # TestClient
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
# Coverage gate lives here (not just CI) so a bare `uv run pytest` enforces the
# QA-01 ≥50% rule locally too. Single-test runs: append `--no-cov`.
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=50"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
